# telegram-trader

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py  __main__.py  main.py  models.py  server.py  utils.py
app/bot/: __init__.py  core.py
app/database/: __init__.py  database.py  models.py
bot/: __init__.py  logging.py  main.py  models.py  utils.py
scripts/: app  deploy.sh  run.sh  setup.sh  start.sh  test.sh  update.sh
tests/: __init__.py  bot_tests.py
