[project]
name = "telegram-trader"
version = "0.1.0"
description = "Telegram trading bot"
readme = "README.md"

urls = { repository = "https://github.com/mohdfareed/discord-telegram-bot" }
authors = [
    {name = "Mohammed Fareed", email = "mohdf.fareed@icloud.com"}
]

requires-python = ">=3.12"

dependencies = [
    "pydantic",
    "pydantic-settings",
    "typer",
    "python-telegram-bot",
    "sqlmodel",
]

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
]
