[project]
name = "telegram-trader"
version = "0.1.0"
description = "Telegram trading bot"
readme = "README.md"

urls = { repository = "https://github.com/mohdfareed/telegram-trader-bot" }
authors = [
    {name = "Mohammed Fareed", email = "mohdf.fareed@icloud.com"}
]

requires-python = ">=3.12"

dependencies = [
    "pydantic",
    "pydantic-settings",
    "sqlmodel",
    "typer",
    "python-telegram-bot[webhooks]",
    "rich",
]

[dependency-groups]
dev = [
  "ruff",
]
