[project]
name = "telegram-trader"
version = "0.2.0"
description = "Telegram trading bot"
readme = "README.md"

urls = { repository = "https://github.com/mohdfareed/telegram-trader" }
authors = [
    {name = "Mohammed Fareed", email = "mohdf.fareed@icloud.com"}
]

requires-python = ">=3.13"

dependencies = [
    "pydantic",
    "pydantic-settings",
    "sqlmodel",
    "typer",
    "python-telegram-bot[webhooks,rate-limiter]",
    "rich",
]

[dependency-groups]
dev = [
  "ruff",
]
